Fix bug regarding decimal, fix issues on size limit
fix bug where user could enter decimal as the first value, as well as multiple decimals for number2

fix bug where more numbers were added than allowed

create methods to dynamically fix a number to 4 or 2 decimal if its too large to make it fit

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ button:active{
 .sidebar{
     background-color: orange;
 }
-.mainpanel{
+.mainPanel{
     background-color: darkcyan;
 }
 .topbar{
